dd eportenerator with  and  report generation

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 
     implementation platform('org.junit:junit-bom:5.10.0')
     implementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 
 }
 
